--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
 
   # Run `pod lib lint` if specified
   - if [ $POD_LINT == "YES" ]; then
-      pod lib lint;
+      pod lib lint --allow-warnings;
     fi
 
 # after_success:
