--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,21 @@
 # * http://www.objc.io/issue-6/travis-ci.html
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode10
+osx_image: xcode10.1
 language: swift
 env:
   global:
     - WORKSPACE=Example/SessionTools.xcworkspace
     - IOS_FRAMEWORK_SCHEME="SessionTools-Example"
   matrix:
-    - DESTINATION="platform=iOS Simulator,OS=11.3,name=iPhone X" SDK="iphonesimulator" SCHEME="$IOS_FRAMEWORK_SCHEME" RUN_TESTS="YES" POD_LINT="YES"
-
+    - DESTINATION="platform=iOS Simulator,OS=11.3,name=iPhone X" SDK="iphonesimulator" SCHEME="$IOS_FRAMEWORK_SCHEME" RUN_TESTS="YES" POD_LINT="YES"  RUN_DANGER="YES"
+addons:
+  homebrew:
+    update: true
+    taps:
+      - danger/tap
+    packages:
+      - danger-swift
 # cache: cocoapods
 # podfile: Example/Podfile
 before_install:
@@ -31,6 +37,10 @@ script:
       pod lib lint --allow-warnings;
     fi
 
+  # Run Danger if specified
+  - if [ $RUN_DANGER == "YES" ]; then
+      danger-swift ci;
+    fi
 # after_success:
  # - bash <(curl -s https://codecov.io/bash)
 
