Added mock storage container for testing. Disabling keychain tests.

--- a/SessionTools.xcodeproj/xcshareddata/xcschemes/SessionTools-iOS.xcscheme
+++ b/SessionTools.xcodeproj/xcshareddata/xcschemes/SessionTools-iOS.xcscheme
@@ -37,6 +37,17 @@
                BlueprintName = "SessionTools-iOSTests"
                ReferencedContainer = "container:SessionTools.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "KeychainStorageContainerTests/test_KeychainStorageContainer_HasItem()">
+               </Test>
+               <Test
+                  Identifier = "KeychainStorageContainerTests/test_KeychainStorageContainer_RemovedItem()">
+               </Test>
+               <Test
+                  Identifier = "KeychainStorageContainerTests/test_KeychainStorageContainer_StoredItem()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
