--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,18 @@ language: swift
 env:
   global:
     - WORKSPACE=SessionTools.xcworkspace
-    - IOS_FRAMEWORK_SCHEME="SessionTools-iOS"
+    - IOS_FRAMEWORK_SCHEME=SessionTools-iOS
+    - TVOS_FRAMEWORK_SCHEME=SessionTools-tvOS
+    - WATCHOS_FRAMEWORK_SCHEME=SessionTools-watchOS
+    - MACOS_FRAMEWORK_SCHEME=SessionTools-macOS
   matrix:
-    - DESTINATION="platform=iOS Simulator,OS=11.3,name=iPhone X" SDK="iphonesimulator" SCHEME="$IOS_FRAMEWORK_SCHEME" RUN_TESTS="YES" POD_LINT="YES"  RUN_DANGER="YES"
+    - DESTINATION="platform=iOS Simulator,OS=11.2,name=iPhone X"                        SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES" POD_LINT="YES"  RUN_DANGER="YES"
+
+    - DESTINATION="platform=tvOS Simulator,OS=11.2,name=Apple TV 4K"                    SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES" POD_LINT="NO"   RUN_DANGER="NO"
+
+    - DESTINATION="platform=watchOS Simulator,OS=4.2,name=Apple Watch Series 3 - 42mm"  SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"  POD_LINT="NO"   RUN_DANGER="NO"
+
+    - DESTINATION="platform=macosx, OS=10.14"                                           SCHEME="$MACOS_FRAMEWORK_SCHEME"    RUN_TESTS="NO"  POD_LINT="NO"   RUN_DANGER="NO"
 cache:
   directories:
     - ~/.danger-swift
