--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -2,6 +2,7 @@
 line_length: 245
 
 disabled_rules:
+  - identifier_name # Disables SwiftLint complaining about enums with associated values
   - trailing_whitespace # Disables SwiftLint complaining about whitespace characters on empty lines
 
 excluded:
