--- a/SessionTools.xcodeproj/xcshareddata/xcschemes/SessionTools-watchOS.xcscheme
+++ b/SessionTools.xcodeproj/xcshareddata/xcschemes/SessionTools-watchOS.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "12F8271821E7EA2200C8CDA4"
-               BuildableName = "SessionTools-iOSExample.app"
-               BlueprintName = "SessionTools-iOSExample"
+               BlueprintIdentifier = "12C9DEBC21ED3C4D00233C1B"
+               BuildableName = "SessionTools.framework"
+               BlueprintName = "SessionTools-watchOS"
                ReferencedContainer = "container:SessionTools.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,19 +26,9 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "12F8271821E7EA2200C8CDA4"
-            BuildableName = "SessionTools-iOSExample.app"
-            BlueprintName = "SessionTools-iOSExample"
-            ReferencedContainer = "container:SessionTools.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -52,16 +42,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "12F8271821E7EA2200C8CDA4"
-            BuildableName = "SessionTools-iOSExample.app"
-            BlueprintName = "SessionTools-iOSExample"
+            BlueprintIdentifier = "12C9DEBC21ED3C4D00233C1B"
+            BuildableName = "SessionTools.framework"
+            BlueprintName = "SessionTools-watchOS"
             ReferencedContainer = "container:SessionTools.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -71,16 +60,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "12F8271821E7EA2200C8CDA4"
-            BuildableName = "SessionTools-iOSExample.app"
-            BlueprintName = "SessionTools-iOSExample"
+            BlueprintIdentifier = "12C9DEBC21ED3C4D00233C1B"
+            BuildableName = "SessionTools.framework"
+            BlueprintName = "SessionTools-watchOS"
             ReferencedContainer = "container:SessionTools.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
