--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -5,4 +5,4 @@ disabled_rules:
   - trailing_whitespace # Disables SwiftLint complaining about whitespace characters on empty lines
 
 excluded:
-  - Pods
+  - Carthage
