--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         include:
             - name: "iOS"
               scheme: "SessionTools-iOS"
-              platform: "ios"
+              platform: "ios watchos"
               destination: "platform=iOS Simulator,OS=15.0,name=iPhone 12 Pro"
               test: true
               lint: true
