Change cache key to force a clear

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       id: dependency-cache
       with:
         path: Carthage
-        key: ${{ runner.os }}-carthage-${{ hashFiles('**/Cartfile.resolved') }}
+        key: ${{ runner.os }}-dependencies-${{ hashFiles('**/Cartfile.resolved') }}
 
     - name: Dependencies
       if: steps.dependency-cache.outputs.cache-hit != 'true'
