--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
             - name: "watchOS"
               scheme: "SessionTools watchOS"
               destination: "platform=watchOS Simulator,OS=8.3,name=Apple Watch Series 6 - 44mm"
-              test: false
+              test: true
               lint: false
 
             - name: "macOS"
