--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,25 +20,21 @@ jobs:
               scheme: "SessionTools iOS"
               destination: "platform=iOS Simulator,OS=15.2,name=iPhone 12 Pro"
               test: true
-              lint: true
 
             - name: "tvOS"
               scheme: "SessionTools tvOS"
               destination: "platform=tvOS Simulator,OS=15.2,name=Apple TV 4K"
               test: true
-              lint: false
 
             - name: "watchOS"
               scheme: "SessionTools watchOS"
               destination: "platform=watchOS Simulator,OS=8.3,name=Apple Watch Series 6 - 44mm"
               test: true
-              lint: false
 
             - name: "macOS"
               scheme: "SessionTools macOS"
               destination: "arch=x86_64"
               test: true
-              lint: false
 
     steps:
     - name: Checkout
@@ -71,8 +67,23 @@ jobs:
             ONLY_ACTIVE_ARCH=NO || exit 1
         fi
 
+  Lint:
+    runs-on: macos-11
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_13.2.app/Contents/Developer
+      cocoapods: true
+      spm: true
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Lint
       run: >
-        if [[ ${{ matrix.lint }} == true ]]; then
+        if [[ ${{ env.spm }} == true ]]; then
+          swift package describe
+        fi
+
+        if [[ ${{ env.cocoapods }} == true ]]; then
           pod lib lint
         fi
